feat(staffSummaryFrontEndBackEndCollaboration): Update variable to currentPageIndex in trainingAndQualificationsSummary

--- a/src/app/shared/components/training-and-qualifications-summary/training-and-qualifications-summary.component.html
+++ b/src/app/shared/components/training-and-qualifications-summary/training-and-qualifications-summary.component.html
@@ -97,6 +97,6 @@
 <app-pagination
   [itemsPerPage]="itemsPerPage"
   [totalNoOfItems]="workerCount"
-  [pageIndex]="pageIndex"
+  [currentPageIndex]="currentPageIndex"
   (emitCurrentPage)="handlePageUpdate($event)"
 ></app-pagination>
