Revert "Fix for the front end"
This reverts commit cd9496a41daf0838f67277f9c432dd7490cd25aa.

--- a/src/assets/scss/modules/_overlay.scss
+++ b/src/assets/scss/modules/_overlay.scss
@@ -1,9 +1,9 @@
-@import '~@angular/cdk/index.scss';
+@import '~@angular/cdk/_overlay.scss';
 
 $cdk-overlay-dark-backdrop-background: rgba(0, 0, 0, 0.5);
 $backdrop-animation-duration: 0ms !default;
 
-@include overlay();
+@include cdk-overlay();
 
 .cdk-overlay-pane {
   background: govuk-colour('white');
