updates styles for search input

--- a/src/app/shared/components/search-input/search-input.component.html
+++ b/src/app/shared/components/search-input/search-input.component.html
@@ -1,4 +1,4 @@
-<div class="govuk-form-group govuk-!-width-full govuk-input--search">
+<div class="govuk-form-group govuk-!-width-full input--search">
   <label for="search" class="govuk-label">Search</label>
   <div class="govuk__flex govuk__align-items-center govuk__justify-content-space-between">
     <div class="govuk__flex govuk-!-width-two-thirds govuk__align-items-center govuk-util__light-bg">
@@ -13,7 +13,7 @@
       />
       <div>
         <button
-          class="govuk-button govuk-button--tertiary govuk-!-margin-bottom-0"
+          class="govuk-button button-override--search govuk-!-margin-bottom-0"
           name="search"
           type="button"
           (click)="handleOnSubmit($event)"
