--- a/src/app/shared/components/search-input/search-input.component.scss
+++ b/src/app/shared/components/search-input/search-input.component.scss
@@ -2,15 +2,15 @@ button > img {
   filter: brightness(0) invert(1);
 }
 
-.govuk-input--search div > .govuk-util__light-bg {
+.input--search div > .govuk-util__light-bg {
   padding: 10px;
 }
 
-.govuk-input--search .govuk-input:focus {
+.input--search .govuk-input:focus {
   z-index: 2;
 }
 
-.govuk-input--search .govuk-button:not(.govuk-button--link) {
+.input--search .govuk-button:not(.govuk-button--link) {
   height: 40px;
   width: 40px;
   box-shadow: none;
@@ -19,7 +19,7 @@ button > img {
   overflow: hidden;
 }
 
-.govuk-input--search .govuk-button:not(.govuk-button--link) img {
+.input--search .govuk-button:not(.govuk-button--link) img {
   display: block;
   position: absolute;
   height: 20px;
@@ -29,10 +29,24 @@ button > img {
   pointer-events: none;
 }
 
-.govuk-input--search .govuk-button:not(.govuk-button--link):focus {
+.input--search .button-override--search {
   background-color: #1d70b8;
+  margin-left: -2px;
 }
 
-.govuk-input--search .govuk-button:not(.govuk-button--link):active {
+.input--search .button-override--search:hover {
+  background-color: #207dce;
+}
+
+.input--search .button-override--search:focus {
+  background-color: #1d70b8;
+  z-index: 2;
+  outline: 3px solid #ffdd00;
+  outline-offset: 0;
+  box-shadow: inset 0 0 0 2px #000;
+  border: 2px solid #0b0c0c;
+}
+
+.input--search .button-override--search:active {
   top: 0;
 }
