adds aria-hidden to decorative image on search submit

--- a/src/app/shared/components/search-input/search-input.component.html
+++ b/src/app/shared/components/search-input/search-input.component.html
@@ -21,7 +21,7 @@
           (click)="handleOnSubmit($event)"
         >
           {{ searchButtonName }}
-          <img src="/assets/images/search-icon.svg" alt="" />
+          <img src="/assets/images/search-icon.svg" alt="" aria-hidden="true" />
         </button>
       </div>
     </div>
