--- a/src/app/shared/components/staff-summary/staff-summary.component.html
+++ b/src/app/shared/components/staff-summary/staff-summary.component.html
@@ -1,10 +1,18 @@
-<div class="govuk-form-group">
-  <label class="govuk-label" for="sortByStaff"> Sort by </label>
-  <select class="govuk-select" id="sortByStaff" name="sortByStaff" (change)="sortBy($event.target.value)">
-    <option *ngFor="let sortStaffOption of sortStaffOptions | keyvalue" value="{{ sortStaffOption.key }}">
-      {{ sortStaffOption.value }}
-    </option>
-  </select>
+<div class="govuk-grid-row govuk-util__vertical-align-center">
+  <div class="govuk-grid-column-three-quarters">
+    <app-search-input accessibleLabel="for staff records" (emitInput)="handleSearch($event)"></app-search-input>
+  </div>
+
+  <div class="govuk-grid-column-one-quarter govuk-!-margin-bottom-0 govuk-!-padding-top-2 govuk-!-padding-bottom-2">
+    <div class="govuk-form-group">
+      <label class="govuk-label" for="sortByStaff"> Sort by </label>
+      <select class="govuk-select" id="sortByStaff" name="sortByStaff" (change)="sortBy($event.target.value)">
+        <option *ngFor="let sortStaffOption of sortStaffOptions | keyvalue" value="{{ sortStaffOption.key }}">
+          {{ sortStaffOption.value }}
+        </option>
+      </select>
+    </div>
+  </div>
 </div>
 <table class="govuk-table">
   <thead class="govuk-table__head">
