--- a/src/app/features/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/dashboard.component.html
@@ -35,6 +35,10 @@
         <app-benchmarks-tab class="asc-benchmarks-tab" [workplace]="workplace"></app-benchmarks-tab>
       </app-tab>
 
+      <app-tab *ngIf="workplace && canViewEstablishment" [title]="'WDF'">
+        <app-wdf-tab [workplace]="workplace"></app-wdf-tab>
+      </app-tab>
+
       <app-tab *ngIf="workplace && canViewListOfUsers" [title]="'Users'" [alert]="showSecondUserBanner">
         <app-user-accounts-summary
           [workplace]="workplace"
