add new Your Data heading and paragraph

--- a/src/app/shared/components/wdf-tab/wdf-tab.component.html
+++ b/src/app/shared/components/wdf-tab/wdf-tab.component.html
@@ -1,6 +1,13 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <h2 class="govuk-heading-m">Workforce Development Fund</h2>
+    <span>
+      <h2 class="govuk-heading-s">Your data</h2>
+    </span>
+    <p class="govuk-!-margin-bottom-6">
+      When your data meets Workforce Development Fund (WDF) requirements, you can claim back money spent on staff
+      development.
+    </p>
     <ng-container *ngIf="!isParent; else parent">
       <ng-container *ngIf="overallWdfEligibility; else notEligible">
         <span>
