--- a/src/app/features/workplace/view-my-workplaces/view-my-workplaces.component.html
+++ b/src/app/features/workplace/view-my-workplaces/view-my-workplaces.component.html
@@ -20,9 +20,14 @@
 
 <ul class="govuk-list">
   <ng-container *ngIf="pendingWorkplaces.length">
-    <li class="govuk-util__list-record govuk-!-margin-bottom-0 govuk-panel--light-blue" *ngFor="let workplaces of pendingWorkplaces">
+    <li
+      class="govuk-util__list-record govuk-!-margin-bottom-0 govuk-panel--light-blue"
+      *ngFor="let workplaces of pendingWorkplaces"
+    >
       <div>
-        <span class="govuk-!-padding-left-3">Your application for {{workplaces.name}} is being reviewed by Skills for Care.</span>
+        <span class="govuk-!-padding-left-3"
+          >Your application for {{ workplaces.name }} is being reviewed by Skills for Care.</span
+        >
         <span class="govuk-util__float-right govuk-!-padding-right-3">Pending</span>
       </div>
     </li>
@@ -38,3 +43,9 @@
   </ng-container>
 </ul>
 <p *ngIf="pendingWorkplaces.length === 0 && workplaces.length === 0">There are no workplaces.</p>
+<app-pagination
+  [itemsPerPage]="itemsPerPage"
+  [totalNoOfItems]="workplacesCount"
+  (emitCurrentPage)="handlePageUpdate($event)"
+  [currentPageIndex]="currentPageIndex"
+></app-pagination>
