feat(childWorkplaceRecordPagination) Updated paginations to only set page from the parent component

--- a/src/app/features/workplace/view-my-workplaces/view-my-workplaces.component.html
+++ b/src/app/features/workplace/view-my-workplaces/view-my-workplaces.component.html
@@ -45,6 +45,6 @@
 <app-pagination
   [itemsPerPage]="itemsPerPage"
   [totalNoOfItems]="workplacesCount"
-  (emitCurrentPage)="handlePageUpdate($event)"
+  (currentPageIndexChange)="handlePageUpdate($event)"
   [currentPageIndex]="currentPageIndex"
 ></app-pagination>
