--- a/src/app/shared/components/staff-summary/staff-summary.component.html
+++ b/src/app/shared/components/staff-summary/staff-summary.component.html
@@ -72,6 +72,6 @@
 <app-pagination
   [itemsPerPage]="itemsPerPage"
   [totalNoOfItems]="workerCount"
-  (emitCurrentPage)="handlePageUpdate($event)"
+  (currentPageIndexChange)="handlePageUpdate($event)"
   [currentPageIndex]="currentPageIndex"
 ></app-pagination>
