--- a/src/app/shared/components/training-and-qualifications-summary/training-and-qualifications-summary.component.html
+++ b/src/app/shared/components/training-and-qualifications-summary/training-and-qualifications-summary.component.html
@@ -98,5 +98,5 @@
   [itemsPerPage]="itemsPerPage"
   [totalNoOfItems]="workerCount"
   [currentPageIndex]="currentPageIndex"
-  (emitCurrentPage)="handlePageUpdate($event)"
+  (currentPageIndexChange)="handlePageUpdate($event)"
 ></app-pagination>
