--- a/src/app/shared/components/staff-records-tab/staff-records-tab.component.html
+++ b/src/app/shared/components/staff-records-tab/staff-records-tab.component.html
@@ -1,6 +1,6 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-one-half">
-    <h2 class="govuk-heading-m">Staff records ({{ workers?.length || 0 }})</h2>
+    <h2 class="govuk-heading-m">Staff records ({{ workerCount || 0 }})</h2>
   </div>
   <div *ngIf="canAddWorker" class="govuk-grid-column-one-half govuk-util__align-right">
     <a
@@ -29,7 +29,7 @@
   <app-total-staff-panel
     [workplace]="workplace"
     [totalStaff]="this.workplace.numberOfStaff"
-    [totalWorkers]="workers?.length"
+    [totalWorkers]="workerCount"
     [returnToDash]="true"
   ></app-total-staff-panel>
 
