--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -26,10 +26,10 @@
           </li>
         </ng-container>
         <ng-container *ngIf="isLoggedIn()">
-          <li class="govuk-header__navigation-item">
+          <li class="govuk-header__navigation-item" routerLinkActive="active">
             <a [routerLink]="['/account-management']" class="govuk-header__link">{{ fullname }}</a>
           </li>
-          <li *ngIf="!isOnAdminScreen" class="govuk-header__navigation-item">
+          <li *ngIf="!isOnAdminScreen" class="govuk-header__navigation-item" routerLinkActive="active">
             <a [routerLink]="['/workplace', workplaceId, 'users']" class="govuk-header__link">Users</a>
           </li>
           <li class="govuk-header__navigation-item">
