add feature flag to dashboard and header components, and test files

--- a/src/app/features/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/dashboard.component.html
@@ -39,7 +39,11 @@
         <app-wdf-tab [workplace]="workplace"></app-wdf-tab>
       </app-tab>
 
-      <app-tab *ngIf="workplace && canViewListOfUsers" [title]="'Users'" [alert]="showSecondUserBanner">
+      <app-tab
+        *ngIf="workplace && canViewListOfUsers && !wdfNewDesignFlag"
+        [title]="'Users'"
+        [alert]="showSecondUserBanner"
+      >
         <app-user-accounts-summary
           [workplace]="workplace"
           [showSecondUserBanner]="showSecondUserBanner"
