--- a/src/app/core/components/header/header.component.scss
+++ b/src/app/core/components/header/header.component.scss
@@ -1,5 +1,13 @@
-.active {
-  a {
-    font-weight: bold;
+li {
+  margin-left: 15px;
+
+  &.active {
+    a {
+      font-weight: bold;
+    }
+  }
+
+  &::after {
+    content: none !important;
   }
 }
