change logout text to sign out

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -43,7 +43,7 @@
             >
           </li>
           <li class="govuk-header__navigation-item">
-            <a href="#" (click)="signOut($event)" class="govuk-header__link govuk-link--no-underline">Logout</a>
+            <a href="#" (click)="signOut($event)" class="govuk-header__link govuk-link--no-underline">Sign out</a>
           </li>
         </ng-container>
       </ul>
