fix(childWorkplaceSearchFixes) Passed WorkerCount into training and qualification to fix worker count bug

--- a/src/app/features/workplace/view-workplace/view-workplace.component.html
+++ b/src/app/features/workplace/view-workplace/view-workplace.component.html
@@ -53,6 +53,7 @@
         <app-training-and-qualifications-tab
           [workplace]="workplace"
           [workers]="workers"
+          [workerCount]="workerCount"
         ></app-training-and-qualifications-tab>
       </app-tab>
       <app-tab *ngIf="canViewBenchmarks" [title]="'Benchmarks'">
