--- a/src/app/features/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/dashboard.component.html
@@ -32,6 +32,7 @@
         <app-training-and-qualifications-tab
           [workplace]="workplace"
           [workers]="workers"
+          [workerCount]="workerCount"
         ></app-training-and-qualifications-tab>
       </app-tab>
 
