--- a/src/app/features/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/dashboard.component.html
@@ -35,7 +35,7 @@
         <app-benchmarks-tab class="asc-benchmarks-tab" [workplace]="workplace"></app-benchmarks-tab>
       </app-tab>
 
-      <app-tab *ngIf="workplace && canViewEstablishment" [title]="'WDF'">
+      <app-tab *ngIf="workplace && canViewEstablishment && wdfNewDesignFlag" [title]="'WDF'">
         <app-wdf-tab [workplace]="workplace"></app-wdf-tab>
       </app-tab>
 
