fix(paginationSnaggingList): Add totalWorkplaceCount to display different messages based on there being no child workplaces or no workplaces returned from a search

--- a/src/app/features/workplace/view-my-workplaces/view-my-workplaces.component.html
+++ b/src/app/features/workplace/view-my-workplaces/view-my-workplaces.component.html
@@ -18,45 +18,50 @@
   </div>
 </div>
 
-<div class="govuk-grid-row govuk-!-margin-bottom-5">
-  <div class="govuk-grid-column-three-quarters">
-    <app-search-input accessibleLabel="child workplace records" (emitInput)="handleSearch($event)"></app-search-input>
+<div *ngIf="totalWorkplaceCount; else noWorkplaces">
+  <div class="govuk-grid-row govuk-!-margin-bottom-5">
+    <div class="govuk-grid-column-three-quarters">
+      <app-search-input accessibleLabel="child workplace records" (emitInput)="handleSearch($event)"></app-search-input>
+    </div>
   </div>
-</div>
 
-<div *ngIf="workplacesCount; else noWorkplacesFound">
-  <ul class="govuk-list">
-    <ng-container *ngFor="let workplace of workplaces">
-      <li
-        class="govuk-util__list-record govuk-!-margin-bottom-0 govuk-panel--light-blue"
-        *ngIf="workplace.ustatus === 'PENDING' || workplace.ustatus === 'IN PROGRESS'"
-      >
-        <div>
-          <span class="govuk-!-padding-left-3"
-            >Your application for {{ workplace.name }} is being reviewed by Skills for Care.</span
-          >
-          <span class="govuk-util__float-right govuk-!-padding-right-3">Pending</span>
-        </div>
-      </li>
-      <li class="govuk-util__list-record govuk-!-margin-bottom-0" *ngIf="workplace.ustatus === null">
-        <app-workplace-info-panel
-          [workplace]="workplace"
-          (changeOwnershipAndPermissionsEvent)="changeOwnershipAndPermissions($event)"
+  <div *ngIf="workplaceCount; else noWorkplacesFoundInSearch">
+    <ul class="govuk-list">
+      <ng-container *ngFor="let workplace of workplaces">
+        <li
+          class="govuk-util__list-record govuk-!-margin-bottom-0 govuk-panel--light-blue"
+          *ngIf="workplace.ustatus === 'PENDING' || workplace.ustatus === 'IN PROGRESS'"
         >
-        </app-workplace-info-panel>
-      </li>
-    </ng-container>
-  </ul>
-</div>
-<ng-template #noWorkplacesFound>
-  <p class="govuk-util__bold">There are no matching results.</p>
-  <p>Make sure that your spelling is correct.</p>
-</ng-template>
+          <div>
+            <span class="govuk-!-padding-left-3"
+              >Your application for {{ workplace.name }} is being reviewed by Skills for Care.</span
+            >
+            <span class="govuk-util__float-right govuk-!-padding-right-3">Pending</span>
+          </div>
+        </li>
+        <li class="govuk-util__list-record govuk-!-margin-bottom-0" *ngIf="workplace.ustatus === null">
+          <app-workplace-info-panel
+            [workplace]="workplace"
+            (changeOwnershipAndPermissionsEvent)="changeOwnershipAndPermissions($event)"
+          >
+          </app-workplace-info-panel>
+        </li>
+      </ng-container>
+    </ul>
+  </div>
+  <ng-template #noWorkplacesFoundInSearch>
+    <p class="govuk-util__bold">There are no matching results.</p>
+    <p>Make sure that your spelling is correct.</p>
+  </ng-template>
 
-<p *ngIf="workplaces.length === 0">There are no workplaces.</p>
-<app-pagination
-  [itemsPerPage]="itemsPerPage"
-  [totalNoOfItems]="workplacesCount"
-  (currentPageIndexChange)="handlePageUpdate($event)"
-  [currentPageIndex]="currentPageIndex"
-></app-pagination>
+  <app-pagination
+    [itemsPerPage]="itemsPerPage"
+    [totalNoOfItems]="workplaceCount"
+    (currentPageIndexChange)="handlePageUpdate($event)"
+    [currentPageIndex]="currentPageIndex"
+  ></app-pagination>
+</div>
+
+<ng-template #noWorkplaces>
+  <p>There are no workplaces.</p>
+</ng-template>
