--- a/src/app/shared/components/training-and-qualifications-summary/training-and-qualifications-summary.component.html
+++ b/src/app/shared/components/training-and-qualifications-summary/training-and-qualifications-summary.component.html
@@ -36,7 +36,7 @@
     </div>
   </div>
 </div>
-<table *ngIf="workerCount; else noWorkersFound" class="govuk-table" data-testid="training-worker-table">
+<table *ngIf="workerCount; else noWorkersFoundInSearch" class="govuk-table" data-testid="training-worker-table">
   <thead class="govuk-table__head">
     <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="col">Staff name</th>
@@ -98,7 +98,7 @@
     </tr>
   </tbody>
 </table>
-<ng-template #noWorkersFound>
+<ng-template #noWorkersFoundInSearch>
   <p class="govuk-util__bold">There are no matching results.</p>
   <p>Make sure that your spelling is correct.</p>
 </ng-template>
