feat(wdfClaimAddLearnersStartPage): Add dynamic staff record requirements based on claimType passed in through state

--- a/src/app/features/wdf/wdf-claims/add-learners-start-page/add-learners-start-page.component.html
+++ b/src/app/features/wdf/wdf-claims/add-learners-start-page/add-learners-start-page.component.html
@@ -5,5 +5,9 @@
       Now you need to add learners to your claim
     </h1>
     <p>There needs to be a staff record in ASC-WDS for each learner that you want to add.</p>
+    <p class="govuk-inset-text">
+      Staff records will need to include a name that matches the one shown on their learning award certificate, not an
+      ID number<ng-container *ngIf="dobRequired">, and a date of birth</ng-container>.
+    </p>
   </div>
 </div>
