removes the full stop of empty state return for search

--- a/src/app/features/workplace/view-my-workplaces/view-my-workplaces.component.html
+++ b/src/app/features/workplace/view-my-workplaces/view-my-workplaces.component.html
@@ -50,7 +50,7 @@
     </ul>
   </div>
   <ng-template #noWorkplacesFoundInSearch>
-    <p class="govuk-util__bold">There are no matching results.</p>
+    <p class="govuk-util__bold">There are no matching results</p>
     <p>Make sure that your spelling is correct.</p>
   </ng-template>
 
