--- a/src/app/shared/components/training-and-qualifications-summary/training-and-qualifications-summary.component.html
+++ b/src/app/shared/components/training-and-qualifications-summary/training-and-qualifications-summary.component.html
@@ -99,7 +99,7 @@
   </tbody>
 </table>
 <ng-template #noWorkersFoundInSearch>
-  <p class="govuk-util__bold">There are no matching results.</p>
+  <p class="govuk-util__bold">There are no matching results</p>
   <p>Make sure that your spelling is correct.</p>
 </ng-template>
 <app-pagination
