--- a/src/app/shared/components/staff-summary/staff-summary.component.html
+++ b/src/app/shared/components/staff-summary/staff-summary.component.html
@@ -70,7 +70,7 @@
   </tbody>
 </table>
 <ng-template #noWorkersFound>
-  <p class="govuk-util__bold">There are no matching results.</p>
+  <p class="govuk-util__bold">There are no matching results</p>
   <p>Make sure that your spelling is correct.</p>
 </ng-template>
 <app-pagination
