feat(wdfClaimAddLearnersStartPage): Set up MakeAClaimProgressBar component

--- a/src/app/features/wdf/wdf-claims/add-learners-start-page/add-learners-start-page.component.html
+++ b/src/app/features/wdf/wdf-claims/add-learners-start-page/add-learners-start-page.component.html
@@ -23,4 +23,7 @@
       </ul>
     </ng-template>
   </div>
+  <div class="govuk-grid-column-one-third govuk-!-margin-top-8">
+    <app-make-a-claim-progress-bar></app-make-a-claim-progress-bar>
+  </div>
 </div>
