feat(wdfClaimAddLearnersStartPage): Set up stub tags for status icons in progress bar

--- a/src/app/features/wdf/wdf-claims/make-a-claim-progress-bar/make-a-claim-progress-bar.component.html
+++ b/src/app/features/wdf/wdf-claims/make-a-claim-progress-bar/make-a-claim-progress-bar.component.html
@@ -1,6 +1,10 @@
 <h3 class="govuk-!-margin-bottom-0">Make a claim</h3>
 <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible" />
-<p>Select qualification</p>
-<p>Add learners</p>
-<p>Upload certificate</p>
-<p>Review and submit</p>
+<ng-container *ngFor="let step of steps; index as i">
+  <p>
+    <span *ngIf="i < stepIndex" [attr.data-testid]="'completed-' + i">Completed </span>
+    <span *ngIf="i == stepIndex" [attr.data-testid]="'currentStep-' + i">Current </span>
+    <span *ngIf="i > stepIndex" [attr.data-testid]="'notCompleted-' + i">Not done </span>
+    {{ step }}
+  </p>
+</ng-container>
