--- a/src/app/features/wdf/wdf-claims/add-learners-start-page/add-learners-start-page.component.html
+++ b/src/app/features/wdf/wdf-claims/add-learners-start-page/add-learners-start-page.component.html
@@ -24,6 +24,6 @@
     </ng-template>
   </div>
   <div class="govuk-grid-column-one-third govuk-!-margin-top-8">
-    <app-make-a-claim-progress-bar></app-make-a-claim-progress-bar>
+    <app-make-a-claim-progress-bar stepIndex="1"></app-make-a-claim-progress-bar>
   </div>
 </div>
