add change link to the check details page which prepopulates the form on the previous page

--- a/src/app/features/wdf/wdf-claims/wdf-grant-letter/grant-letter-check-details/grant-letter-check-details.component.html
+++ b/src/app/features/wdf/wdf-claims/wdf-grant-letter/grant-letter-check-details/grant-letter-check-details.component.html
@@ -10,11 +10,18 @@
     >
       <div class="govuk-summary-list__row">
         <dt class="govuk-summary-list__key">Full name</dt>
-        <dd class="govuk-summary-list__value">{{ name }}</dd>
+        <dd class="govuk-summary-list__value" data-testid="name">{{ name }}</dd>
+        <dd class="govuk-summary-list__actions">
+          <a
+            [routerLink]="['/wdf-claims', 'grant-letter']"
+            [state]="{ name: this.name, email: this.email, myself: this.radioSelected }"
+            >Change</a
+          >
+        </dd>
       </div>
       <div class="govuk-summary-list__row">
         <dt class="govuk-summary-list__key">Email address</dt>
-        <dd class="govuk-summary-list__value">{{ email }}</dd>
+        <dd class="govuk-summary-list__value" data-testid="email">{{ email }}</dd>
       </div>
     </dl>
   </div>
