add tests for prepopulating form when routing from change link, change myself name in state to radioSelection

--- a/src/app/features/wdf/wdf-claims/wdf-grant-letter/grant-letter-check-details/grant-letter-check-details.component.html
+++ b/src/app/features/wdf/wdf-claims/wdf-grant-letter/grant-letter-check-details/grant-letter-check-details.component.html
@@ -14,7 +14,7 @@
         <dd class="govuk-summary-list__actions">
           <a
             [routerLink]="['/wdf-claims', 'grant-letter']"
-            [state]="{ name: this.name, email: this.email, myself: this.radioSelected }"
+            [state]="{ name: this.name, email: this.email, radioSelection: this.radioSelected }"
             >Change</a
           >
         </dd>
